courses/430_programming-languages/assignment-6/tests/error/hw5_error17.nex
fun f(a:int,a:int):none
{
   print (a);
   print (":n");
   print (a);
   print (":n");
}
print "should not get here:n";
1 / 0;

f(1, 2);
